--- a/version1.1/startup.html
+++ b/version1.1/startup.html
@@ -9,9 +9,9 @@
 
 <head>
 	
-	<link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="css/survey.css" media="screen" rel="stylesheet" type="text/css" />
 	
-	<script type="text/javascript" src="jquery-1.4.4.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready( function() {
 			//put auto-populate 
