--- a/version1.1/student.html
+++ b/version1.1/student.html
@@ -9,7 +9,7 @@
 
 <head>
 	
-	<link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="css/survey.css" media="screen" rel="stylesheet" type="text/css" />
 
 <style type="text/css">
 	.btn {
@@ -37,7 +37,7 @@
 
 </style>
 
-	<script type="text/javascript" src="jquery-1.4.4.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready( function() {
 
