--- a/version1.1/startup.html
+++ b/version1.1/startup.html
@@ -11,7 +11,7 @@
 	
 	<link href="css/survey.css" media="screen" rel="stylesheet" type="text/css" />
 	
-	<script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.4.2.js"></script>
 	<script type="text/javascript">
 		$(document).ready( function() {
 			//put auto-populate 
