--- a/version1.1/student.html
+++ b/version1.1/student.html
@@ -37,7 +37,7 @@
 
 </style>
 
-	<script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.4.2.js"></script>
 	<script type="text/javascript">
 		$(document).ready( function() {
 
