corrected the radio buttons

--- a/version1.1/student.html
+++ b/version1.1/student.html
@@ -119,8 +119,8 @@
 		
        <p class="underline">
 				<label>3. Would you like to spare sometime out of your schedule on a consistent basis to work on live projects.</label>
-      	<span class="border"> <input class="text"  name="stud_ready" size="30" type="radio" value="willing_to_work"/> Yes I am willing to work on live projects </span>
-      	<span class="border"> <input class="text"  name="stud_ready" size="30" type="radio" value="unwilling_to_work"/> No I won't be able manage it with tight college schedule</span>
+      	<span class="border"> <input name="stud_ready" size="30" type="radio" value="willing_to_work"/> Yes I am willing to work on live projects </span>
+      	<span class="border"> <input name="stud_ready" size="30" type="radio" value="unwilling_to_work"/> No I won't be able manage it with tight college schedule</span>
 			</p> 
     
        <p class="underline">
@@ -132,25 +132,25 @@
    
 	 		<p class="underline">
 				<label>5. What kind of company/industry would you prefer for such projects</label>
-      	<span class="border"> <input class="text"  name="stud_comp" size="30" type="radio" Value="any_company"/> Any Company</span>
-      	<span class="border"> <input class="text"  name="stud_comp" size="30" type="radio" value="tech_company"/> Tech Company</span>
-      	<span class="border"> <input class="text"  name="stud_comp" size="30" type="radio" value="tech_startup"/> Tech Startup</span>
-      	<span class="border"> <input class="text"  name="stud_comp" size="30" type="radio" value="tech_mnc"/> Tech MNC</span>
-		<span class="border"> <input class="text"  name="stud_comp" size="30" type="radio" value="non-tech_company"/> Non-tech Company</span>
+      	<span class="border"> <input   name="stud_comp" size="30" type="radio" Value="any_company"/> Any Company</span>
+      	<span class="border"> <input   name="stud_comp" size="30" type="radio" value="tech_company"/> Tech Company</span>
+      	<span class="border"> <input   name="stud_comp" size="30" type="radio" value="tech_startup"/> Tech Startup</span>
+      	<span class="border"> <input   name="stud_comp" size="30" type="radio" value="tech_mnc"/> Tech MNC</span>
+		<span class="border"> <input  name="stud_comp" size="30" type="radio" value="non-tech_company"/> Non-tech Company</span>
 						
 			</p>
 
     	<p class="underline">
 				<label>6. Do you have internet at your room / hostel / home ? </label>
-      	<span class="border"> <input class="text"  name="stud_internet" size="30" type="radio" value="internet_available"/> Yes, I have</span>
-      	<span class="border"> <input class="text"  name="stud_internet" size="30" type="radio" value="internet_not_available"/> No, I don't have</span>
+      	<span class="border"> <input  name="stud_internet" size="30" type="radio" value="internet_available"/> Yes, I have</span>
+      	<span class="border"> <input  name="stud_internet" size="30" type="radio" value="internet_not_available"/> No, I don't have</span>
 		</p>
 			
 			 <p class="underline">
 				<label>7. Can you work from an office space in your city ?</label>
-      	<span class="border"> <input class="text"  name="stud_office" size="30" type="radio" value="any_day"/> Yes,&nbsp;&nbsp; any day</span>
-      	<span class="border"> <input class="text"  name="stud_office" size="30" type="radio" value="only_weekends"/> Only weekends</span>
-      	<span class="border"> <input class="text"  name="stud_office" size="30" type="radio" value="prefer_working_from_home"/> No, I prefer working from home /  hostel / room.</span>
+      	<span class="border"> <input  name="stud_office" size="30" type="radio" value="any_day"/> Yes,&nbsp;&nbsp; any day</span>
+      	<span class="border"> <input  name="stud_office" size="30" type="radio" value="only_weekends"/> Only weekends</span>
+      	<span class="border"> <input  name="stud_office" size="30" type="radio" value="prefer_working_from_home"/> No, I prefer working from home /  hostel / room.</span>
 			</p> 	
 		
 
