updates_to_pages

--- a/version1.1/aboutUs.htm
+++ b/version1.1/aboutUs.htm
@@ -135,10 +135,10 @@
 				<ul> 
 					<li><a target="_top" href="http://www.StalkNinja.com/" >Home</a></li>
 
-					<li><a target="_top" href="http://www.StalkNinja.com/how.html">How it Works</a></li>
-					<li><a target="_top" href="http://www.StalkNinja.com/aboutus.html" class="active">About Us</a></li>
-					<li><a target="_top" href="http://www.snapengage.com/pricing.html">Pricing</a></li>
-					<li><a target="_top" href="http://www.snapengage.com/features">What Press Says</a></li>
+					<li><a target="_top" href="how.html">How it Works</a></li>
+					<li><a target="_top" href="aboutus.html" class="active">About Us</a></li>
+					<li><a target="_top" href="pricing.html">Pricing</a></li>
+					<li><a target="_top" href="#">What Press Says</a></li>
 				</ul>
 			</div>
 
@@ -148,7 +148,7 @@
 		</table>
 		</div>
 		<footer>
-	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/aboutUs.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
+	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="aboutUs.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
 </footer>
 </body>
 </html>
