--- a/version1.1/how.html
+++ b/version1.1/how.html
@@ -115,13 +115,13 @@
 					<td>
 			<div class="tab" style="margin-top: 20px;">
 				<ul> 
-					<li><a target="_top" href="http://www.StalkNinja.com/">Home</a></li>
+					<li><a target="_top" href="http://www.StalkNinja.com/" >Home</a></li>
 
-					<li><a target="_top" href="http://www.StalkNinja.com/how.html" class="active">How it Works</a></li>
-					<li><a target="_top" href="http://www.StalkNinja.com/aboutus.html">About Us</a></li>
-					<li><a target="_top" href="http://www.snapengage.com/pricing.html">Pricing</a></li>
-					<li><a target="_top" href="http://www.snapengage.com/features">What Press Says</a></li>
-				</ul>
+					<li><a target="_top" href="how.html">How it Works</a></li>
+					<li><a target="_top" href="aboutus.html" class="active">About Us</a></li>
+					<li><a target="_top" href="pricing.html">Pricing</a></li>
+					<li><a target="_top" href="#">What Press Says</a></li>
+					</ul>
 			</div>
 
 				</td>
@@ -133,7 +133,7 @@
 		<div style="clear:both"></div>
 		</div>
 		<footer>
-	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/aboutUs.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
+	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="aboutUs.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
 </footer>
 </body>
 
