--- a/version1.1/privacy.htm
+++ b/version1.1/privacy.htm
@@ -140,12 +140,12 @@ We donot store any cookies on your compute but some of our business partners and
 					<td>
 			<div class="tab" style="margin-top: 20px;">
 				<ul> 
-					<li><a target="_top" href="http://www.StalkNinja.com/" class="active">Home</a></li>
+					<li><a target="_top" href="http://www.StalkNinja.com/" >Home</a></li>
 
-					<li><a target="_top" href="http://www.StalkNinja.com/how.html">How it Works</a></li>
-					<li><a target="_top" href="http://www.StalkNinja.com/aboutus.html">About Us</a></li>
-					<li><a target="_top" href="http://www.snapengage.com/pricing.html">Pricing</a></li>
-					<li><a target="_top" href="http://www.snapengage.com/features">What Press Says</a></li>
+					<li><a target="_top" href="how.html">How it Works</a></li>
+					<li><a target="_top" href="aboutus.html" class="active">About Us</a></li>
+					<li><a target="_top" href="pricing.html">Pricing</a></li>
+					<li><a target="_top" href="#">What Press Says</a></li>
 				</ul>
 			</div>
 
@@ -155,7 +155,7 @@ We donot store any cookies on your compute but some of our business partners and
 		</table>
 		</div>
 		<footer>
-	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/aboutUs.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="http://stalkninja.com/tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
+	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="aboutUs.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
 </footer>
 </body>
 </html>
