--- a/version1.1/how.html
+++ b/version1.1/how.html
@@ -133,7 +133,7 @@
 		<div style="clear:both"></div>
 		</div>
 		<footer>
-	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="aboutUs.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
+	<address><a href="http://stalkninja.com">Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="aboutus.html">About Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="contactus.html">Contact Us</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="FAQ.html">FAQs</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="privacy.html">Privacy Policy</a> &nbsp; &nbsp; | &nbsp; &nbsp; <a href="tnc.html">Terms & Conditions</a> &nbsp; &nbsp; <strong>&copy StalkNinja 2011</strong> </address>
 </footer>
 </body>
 
